Added panel zoom and disabled buttons when appropriate.

--- a/app/styles/application.css
+++ b/app/styles/application.css
@@ -32,6 +32,7 @@ html, body {
   font-family: Arial, Helvetica, sans-serif
 }
 .page__body {
+  position: relative;
   flex: 1;
   margin-top: 95px;
 }
@@ -62,6 +63,9 @@ html, body {
 .toolbar button:hover {
   background: #f0f0f0;
 }
+.toolbar button:disabled {
+  color: #ccc;
+}
 .panels {
   display: flex;
   margin: 0;
@@ -74,13 +78,24 @@ html, body {
   display: block;
   border: 1px solid #ccc;
   padding: 15px;
-  background: #fafafa;
+  background: #8ea1f8;
   text-align: center;
   transition: all 0.25s ease-in-out;
 }
-.panel:hover {
-  background: #eeeeee;
+.panel.selected {
+  position: fixed;
+  top: 95px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  /* height: 100%; */
+  z-index: 1;
+  border-bottom: 5px solid red;
 }
+/* .panel:hover {
+  background: #eeeeee;
+} */
 .panel--full-width {
   width: calc((100%));
   /* margin-right: 0; */
