--- a/app/styles/application.css
+++ b/app/styles/application.css
@@ -89,7 +89,6 @@ html, body {
   right: 0;
   bottom: 0;
   width: 100%;
-  /* height: 100%; */
   z-index: 1;
   border-bottom: 5px solid red;
 }
@@ -97,11 +96,10 @@ html, body {
   background: #eeeeee;
 } */
 .panel--full-width {
-  width: calc((100%));
-  /* margin-right: 0; */
+  width: 100%;
 }
 .panel--thin {
-  width: calc((100% - 20px) / 3);
+  width: calc(100% / 3);
 }
 /* .panel--thin + .panel--thin + .panel--thin {
   margin-right: 0;
